# Coursework_basicProg

./: .gitignore  CMakeLists.txt  ChoosingTypeOfRace.cpp  ChoosingTypeOfRace.h  Cursovik_basicProg.sln  Cursovik_basicProg.vcxproj  Cursovik_basicProg.vcxproj.filters  GroundTransportRegistration.cpp  GroundTransportRegistration.h  README.md  TransportRegistration.cpp  TransportRegistration.h  TypeOfRaceAndTransport.cpp  TypeOfRaceAndTransport.h  mainCursovik.cpp
DynamicLibraryRace/: DynamicLibraryRace.vcxproj  DynamicLibraryRace.vcxproj.filters  Race.cpp  Race.h
DynamicLibraryTransport/: AirTransport.cpp  AirTransport.h  DynamicLibraryTransport.vcxproj  DynamicLibraryTransport.vcxproj.filters  GroundTransport.cpp  GroundTransport.h  Transport.cpp  Transport.h
